--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,7 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="im.mantu.ionic.pushnotifications">
+
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+
     <application>
-        <!-- <service android:name="im.mantu.ionic.pushnotifications.CallingService"/> -->
+        <service android:name="im.mantu.ionic.pushnotifications.CallingNotificationService" android:exported="false"/>
         <service android:name="im.mantu.ionic.pushnotifications.MessagingService" android:exported="false">
             <intent-filter>
                 <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
