--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,15 +1,11 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="im.mantu.ionic.pushnotifications">
 
+    <application>
+
+    </application>
+
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
-    <application>
-        <service android:name="im.mantu.ionic.pushnotifications.CallingNotificationService" android:exported="false"/>
-        <service android:name="im.mantu.ionic.pushnotifications.MessagingService" android:exported="false">
-            <intent-filter>
-                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
-                <action android:name="com.google.firebase.MESSAGING_EVENT" />
-            </intent-filter>
-        </service>
-    </application>
 </manifest>
